--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^14.1.0",
     "axios": "^1.1.3",
+    "chart.js": "^3.9.1",
     "framer-motion": "^6.2.9",
+    "html-react-parser": "^3.0.4",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.6.4",
     "react-dom": "^18.2.0",
