--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "html-react-parser": "^3.0.4",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.6.4",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-icons": "^3.0.0",
     "react-paginate": "^8.1.4",
