--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@testing-library/user-event": "^14.1.0",
     "axios": "^1.1.3",
     "chart.js": "^3.9.1",
+    "dotenv": "^16.0.3",
+    "firebase": "^9.14.0",
     "framer-motion": "^6.2.9",
     "html-react-parser": "^3.0.4",
     "react": "^18.2.0",
