chore: Rename app, install react-google-button

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Coin Tracker",
-  "name": "Coin Tracker App",
+  "short_name": "Koin Tracker",
+  "name": "Koin Tracker App",
   "icons": [
     {
       "src": "favicon.ico",
