--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cointracker",
+  "name": "kointracker",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -19,6 +19,7 @@
     "react-alice-carousel": "^2.6.4",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
+    "react-google-button": "^0.7.2",
     "react-icons": "^3.0.0",
     "react-paginate": "^8.1.4",
     "react-router-dom": "^6.4.3",
