feat: Add Google sign in functionality

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^9.14.0",
     "framer-motion": "^6.2.9",
     "html-react-parser": "^3.0.4",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.6.4",
     "react-chartjs-2": "^4.3.1",
